# ntsl-graphics

./: README.md
ntsl-1/Application/include/: Fractal.hpp  Geometry.hpp  PerVertexColorMaterial.hpp  PickableObject.hpp  PickingMaterial.hpp  Snowflake.hpp  SnowflakeAnimation.hpp  Snowman.hpp  picking.hpp
ntsl-1/Application/src/: DefaultMaterial.cpp  Fractal.cpp  Geometry.cpp  PerVertexColorMaterial.cpp  PickableObject.cpp  PickingMaterial.cpp  Snowflake.cpp  SnowflakeAnimation.cpp  Snowman.cpp  main.cpp
ntsl-1/Engine/include/: Camera.hpp  RenderObject.hpp
ntsl-1/Engine/src/: Camera.cpp  RenderObject.cpp  Shader.cpp
ntsl-1/Resources/DefaultMaterial/: FragmentShader.glsl
ntsl-1/Resources/PerVertexColorMaterial/: FragmentShader.glsl  VertexShader.glsl
ntsl-1/Resources/PickingMaterial/: PickingFragmentShader.glsl  PickingVertexShader.glsl
ntsl-2/Application/: CMakeLists.txt
ntsl-2/Application/include/: DefaultMaterial.hpp  Geometry.hpp  HullMaterial.hpp  MarchingCubes.hpp
ntsl-2/Application/src/: Geometry.cpp  HullMaterial.cpp  main.cpp
ntsl-2/Engine/include/: Mesh.hpp
ntsl-2/Engine/src/: Camera.cpp  Material.cpp  RenderObject.cpp  Shader.cpp
ntsl-2/Resources/DefaultMaterial/: FragmentShader.glsl  VertexShader.glsl
ntsl-2/Resources/HullMaterial/: FragmentShader.glsl  GeometryShader.glsl  TessControlShader.glsl  TessEvalShader.glsl  VertexShader.glsl
ntsl-code/: CMakeLists.txt  LICENSE.txt
ntsl-code/Application/include/: HullMaterial.hpp  MarchingCubes.hpp  NtslMaterial.hpp
ntsl-code/Application/src/: HullMaterial.cpp  NtslMaterial.cpp  main.cpp
ntsl-code/Engine/: CMakeLists.txt
ntsl-code/Engine/include/: Material.hpp  Program.hpp  Shader.hpp
ntsl-code/Engine/src/: Mesh.cpp  Program.cpp
ntsl-code/Resources/NtslMaterial/: FragmentShader.glsl
